# sample-api-gateway

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/middleware/: auth.py  rate_limit.py
app/routers/: health.py  proxy.py
docs/adr/: ADR-001-use-fastapi-as-gateway.md
k8s/: manifests.yaml
